<resources>
    <string name="app_name">SlothGaming</string>
    <string name="add_a_review">Add a review</string>
    <string name="n_a">N/A</string>
    <string name="add_a_review_title">Add a review</string>
    <string name="tell_others_what_you_thought">Tell others what you thought</string>
    <string name="select_console">Select Console</string>
    <string name="enter_your_review_here">Enter Your Review Here</string>
    <string name="choose_image">Choose Image</string>
    <string name="my_reviews">My Reviews</string>
    <string name="title">Title</string>
    <string name="review">Review</string>
    <string name="your_stats">Your Stats</string>
    <string name="average_rating">Average Rating</string>
    <string name="reviews">Reviews</string>
    <string name="top_console">Top Console</string>
    <string name="delete">Delete</string>
    <string name="are_you_sure_you_want_to_delete_this_review">Are you sure you want to delete this review?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="delete_all_reviews">Delete All Reviews</string>
    <string name="are_you_sure_you_want_to_delete_all_reviews">Are you sure you want to delete all reviews?</string>
    <string name="game_title">Game Title</string>
    <string name="review_has_been_deleted">Review has been deleted</string>
    <string name="all_reviews_has_been_deleted">All Reviews has been deleted</string>
    <string name="please_enter_platform_type">Please Enter Platform Type</string>
    <string name="please_enter_game_title_at_least_3_characters">Please Enter Game Title - At Least 3 Characters</string>
    <string name="please_enter_description">Please Enter Description</string>
    <string name="please_upload_an_image">Please Upload An Image</string>
    <string name="no_reviews_to_delete">No reviews to delete</string>
    <string name="your_statistics">Your Statistics</string>
    <string name="delete_all_reviews_menu">Delete All Reviews</string>
    <string name="no_reviews_to_delete_menu">No reviews to delete</string>
    <string name="ok">OK</string>
    <string name="there_are_no_statistics_to_show">There are no statistics to show</string>
    <string name="edit_review">Edit Review</string>
    <string name="edit_review_btn">Edit Review</string>
    <string name="platform">Platform: %1$s</string>
    <string name="first_name">First name</string>
    <string name="email">Email</string>
    <string name="last_name">Last name</string>
    <string name="password">Password</string>
    <string name="phone_number">Phone number</string>
    <string name="search">search</string>

    <!-- Login / Sign Up -->
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign up</string>
    <string name="sign_up_now">Not a member?\nSIGN UP now!</string>
    <string name="sign_in_successful">Sign in successful</string>
    <string name="welcome">welcome</string>
    <string name="register_successfully">Register Successfully</string>

    <!-- Bottom Nav / Top Menu -->
    <string name="home">Home</string>
    <string name="login">Login</string>
    <string name="sign_out">Sign Out</string>

    <!-- Dialogs / Toasts -->
    <string name="welcome_title">Welcome To Sloth Gaming\n</string>
    <string name="welcome_message">Hello Sloth Gamer!\nHere, you can get all the information about the latest games, top rated games and more.\nAdditionaly you can write your own reviews for any game and any platform with your own rating!\nHave fun and stay Sloth.</string>
    <string name="already_logged_in">You\'re already logged in</string>
    <string name="not_logged_in">You are not logged in</string>
    <string name="must_log_in">You must log in to use this feature</string>
    <string name="sign_out_confirmation">Are you sure you want to sign out?</string>
    <string name="sign_out_success">Sign Out Successfully</string>

    <!-- Home Page Sections -->
    <string name="section_top_rated">Top Rated</string>
    <string name="section_coming_soon">Coming Soon</string>
    <string name="section_ubisoft_spotlight">Ubisoft Spotlight</string>
    <string name="no_description_available">No description available.</string>
    <string name="no_platform_available">No Platform available</string>

    <!-- Search -->
    <string name="search_games_hint">Search games…</string>
    <string name="search_no_results">No results found</string>

    <!-- Notifications -->
    <string name="notification_channel_name">Game Reminders</string>
    <string name="notification_channel_description">Reminders about new and top-rated games</string>
    <string name="notification_reminder_text">New top-rated games are waiting for you!</string>

    <!-- Validation Errors -->
    <string name="error_fill_all_fields">Please fill all the fields</string>
    <string name="error_email_format">Email does not match format</string>
    <string name="error_password_short">Password too short</string>
    <string name="error_wrong_credentials">Wrong email or password</string>
</resources>
